--- a/public/css/common.css
+++ b/public/css/common.css
@@ -180,6 +180,32 @@ header {
           background: url("/Agc/public/images/faq_icon_sub.png") no-repeat;
           background-position-x: 50%;
           background-position-y: 40%; }
+      .container-fluid .menu-block .menu-list #agency_master a {
+        content: '';
+        background: url("/Agc/public/images/agency_master_icon.png") no-repeat;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-position-x: 50%;
+        background-position-y: 40%; }
+        .container-fluid .menu-block .menu-list #agency_master a:hover {
+          background: url("/Agc/public/images/agency_master_icon_sub.png") no-repeat;
+          background-position-x: 50%;
+          background-position-y: 40%; }
+      .container-fluid .menu-block .menu-list #update_menu a {
+        content: '';
+        background: url("/Agc/public/images/update_icon.png") no-repeat;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-position-x: 50%;
+        background-position-y: 40%; }
+        .container-fluid .menu-block .menu-list #update_menu a:hover {
+          background: url("/Agc/public/images/update_icon_sub.png") no-repeat;
+          background-position-x: 50%;
+          background-position-y: 40%; }
+    .container-fluid .menu-block .menu_second .menu-item {
+      margin-top: 1em; }
 
 .container {
   width: 90%;
@@ -305,8 +331,16 @@ header {
 .contact_manegement_block .btn_block {
   text-align: center; }
 
-.middle_block li.page-item, .middle_block span.page-link {
-  display: none !important; }
+.middle_block {
+  position: relative; }
+  .middle_block .csv_output {
+    display: inline-block; }
+  .middle_block .data_count {
+    position: absolute;
+    right: 0;
+    top: 6px; }
+  .middle_block li.page-item, .middle_block span.page-link {
+    display: none !important; }
 
 .content_list {
   margin-top: 15px; }
@@ -318,67 +352,166 @@ header {
       -webkit-line-clamp: 2;
       overflow: hidden; }
 
-#detail_modal, #answer_modal {
+#detail_modal, #answer_modal, #agency_detail_modal, #agency_add_modal {
   display: none;
   width: 80%;
   margin: 0 auto; }
-  #detail_modal .modal-dialog, #answer_modal .modal-dialog {
+  #detail_modal .modal-dialog, #answer_modal .modal-dialog, #agency_detail_modal .modal-dialog, #agency_add_modal .modal-dialog {
     width: 80%;
     margin-top: 0; }
-    #detail_modal .modal-dialog .modal-content, #answer_modal .modal-dialog .modal-content {
+    #detail_modal .modal-dialog .modal-content, #answer_modal .modal-dialog .modal-content, #agency_detail_modal .modal-dialog .modal-content, #agency_add_modal .modal-dialog .modal-content {
       position: relative;
       top: 50px;
       padding: 0; }
-      #detail_modal .modal-dialog .modal-content h3, #answer_modal .modal-dialog .modal-content h3 {
+      #detail_modal .modal-dialog .modal-content h3, #answer_modal .modal-dialog .modal-content h3, #agency_detail_modal .modal-dialog .modal-content h3, #agency_add_modal .modal-dialog .modal-content h3 {
         text-align: center;
         padding-bottom: 10px; }
-      #detail_modal .modal-dialog .modal-content .edit_btn, #answer_modal .modal-dialog .modal-content .edit_btn {
+      #detail_modal .modal-dialog .modal-content .edit_btn, #detail_modal .modal-dialog .modal-content .agency_add_submit, #answer_modal .modal-dialog .modal-content .edit_btn, #answer_modal .modal-dialog .modal-content .agency_add_submit, #agency_detail_modal .modal-dialog .modal-content .edit_btn, #agency_detail_modal .modal-dialog .modal-content .agency_add_submit, #agency_add_modal .modal-dialog .modal-content .edit_btn, #agency_add_modal .modal-dialog .modal-content .agency_add_submit {
         position: absolute;
         top: 20px;
         right: 15px; }
-      #detail_modal .modal-dialog .modal-content .edit_btn_submit, #answer_modal .modal-dialog .modal-content .edit_btn_submit {
+      #detail_modal .modal-dialog .modal-content .edit_btn_submit, #answer_modal .modal-dialog .modal-content .edit_btn_submit, #agency_detail_modal .modal-dialog .modal-content .edit_btn_submit, #agency_add_modal .modal-dialog .modal-content .edit_btn_submit {
         display: none;
         position: absolute;
         top: 20px;
         right: 15px; }
-      #detail_modal .modal-dialog .modal-content .btn_group, #answer_modal .modal-dialog .modal-content .btn_group {
+      #detail_modal .modal-dialog .modal-content .btn_group, #answer_modal .modal-dialog .modal-content .btn_group, #agency_detail_modal .modal-dialog .modal-content .btn_group, #agency_add_modal .modal-dialog .modal-content .btn_group {
         text-align: center; }
-        #detail_modal .modal-dialog .modal-content .btn_group div, #answer_modal .modal-dialog .modal-content .btn_group div {
+        #detail_modal .modal-dialog .modal-content .btn_group div, #answer_modal .modal-dialog .modal-content .btn_group div, #agency_detail_modal .modal-dialog .modal-content .btn_group div, #agency_add_modal .modal-dialog .modal-content .btn_group div {
           display: inline-block;
           padding: 0px 1em 0px 1em; }
-      #detail_modal .modal-dialog .modal-content .input_max, #answer_modal .modal-dialog .modal-content .input_max {
+      #detail_modal .modal-dialog .modal-content .input_max, #answer_modal .modal-dialog .modal-content .input_max, #agency_detail_modal .modal-dialog .modal-content .input_max, #agency_add_modal .modal-dialog .modal-content .input_max {
         width: 90%; }
-      #detail_modal .modal-dialog .modal-content .input_harf, #answer_modal .modal-dialog .modal-content .input_harf {
+      #detail_modal .modal-dialog .modal-content .input_harf, #answer_modal .modal-dialog .modal-content .input_harf, #agency_detail_modal .modal-dialog .modal-content .input_harf, #agency_add_modal .modal-dialog .modal-content .input_harf {
         width: 45%; }
-      #detail_modal .modal-dialog .modal-content .input_pref, #answer_modal .modal-dialog .modal-content .input_pref {
+      #detail_modal .modal-dialog .modal-content .input_pref, #answer_modal .modal-dialog .modal-content .input_pref, #agency_detail_modal .modal-dialog .modal-content .input_pref, #agency_add_modal .modal-dialog .modal-content .input_pref {
         width: 10%; }
-      #detail_modal .modal-dialog .modal-content .input_city, #answer_modal .modal-dialog .modal-content .input_city {
+      #detail_modal .modal-dialog .modal-content .input_city, #answer_modal .modal-dialog .modal-content .input_city, #agency_detail_modal .modal-dialog .modal-content .input_city, #agency_add_modal .modal-dialog .modal-content .input_city {
         width: 15%; }
-      #detail_modal .modal-dialog .modal-content .input_short, #answer_modal .modal-dialog .modal-content .input_short {
+      #detail_modal .modal-dialog .modal-content .input_short, #answer_modal .modal-dialog .modal-content .input_short, #agency_detail_modal .modal-dialog .modal-content .input_short, #agency_add_modal .modal-dialog .modal-content .input_short {
         width: 25%; }
-      #detail_modal .modal-dialog .modal-content .input_add_no, #answer_modal .modal-dialog .modal-content .input_add_no {
+      #detail_modal .modal-dialog .modal-content .input_add_no, #answer_modal .modal-dialog .modal-content .input_add_no, #agency_detail_modal .modal-dialog .modal-content .input_add_no, #agency_add_modal .modal-dialog .modal-content .input_add_no {
         width: 14%; }
-      #detail_modal .modal-dialog .modal-content .detail_edit, #answer_modal .modal-dialog .modal-content .detail_edit {
+      #detail_modal .modal-dialog .modal-content .detail_edit, #answer_modal .modal-dialog .modal-content .detail_edit, #agency_detail_modal .modal-dialog .modal-content .detail_edit, #agency_add_modal .modal-dialog .modal-content .detail_edit {
         display: none; }
+  #detail_modal .agency_th, #answer_modal .agency_th, #agency_detail_modal .agency_th, #agency_add_modal .agency_th {
+    width: 20%; }
 
-.faq_block .col-sm-3 {
-  position: relative;
-  top: 10px; }
-.faq_block .btn_block {
-  text-align: center; }
-.faq_block input#faq_item {
-  width: 100%; }
-.faq_block .confirm_btn_block.button_area {
-  display: inline-block;
-  float: left; }
-
-.faq_list td.btn_group {
-  width: 4%; }
-.faq_list .button_area {
-  display: inline-block;
-  float: left; }
-  .faq_list .button_area .edit_btn {
-    margin-left: 1em; }
+.content-block .tab_content {
+  padding: 0 0 65px 0;
+  clear: both;
+  overflow: hidden;
+  width: 80%;
+  margin: 0 auto; }
+  .content-block .tab_content .panel_block {
+    width: 100%;
+    margin: 0 auto; }
+    .content-block .tab_content .panel_block .panel_content {
+      border: solid 6px;
+      border-color: #863333;
+      border-radius: 15px;
+      background-color: #f3e9e9;
+      margin-bottom: 12px; }
+      .content-block .tab_content .panel_block .panel_content h2 {
+        font-size: 23px;
+        font-weight: bold;
+        padding: 10px 20px;
+        position: relative; }
+        .content-block .tab_content .panel_block .panel_content h2:after {
+          content: '';
+          background: url("../images/faq/arrow_bottom.png") no-repeat;
+          position: absolute;
+          right: 30px;
+          width: 32px;
+          height: 32px;
+          top: 6px; }
+      .content-block .tab_content .panel_block .panel_content h2.active:after {
+        content: '';
+        background: url(../images/faq/arrow_top.png) no-repeat;
+        position: absolute;
+        right: 30px;
+        width: 32px;
+        height: 32px;
+        top: 6px; }
+      .content-block .tab_content .panel_block .panel_content .panel_inner {
+        display: none; }
+        .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container {
+          width: 96%;
+          margin: 0 auto;
+          padding-bottom: 22px; }
+          .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list {
+            border: solid 3px;
+            border-color: #e0e0e0;
+            border-radius: 10px;
+            background-color: white;
+            margin-bottom: 5px; }
+            .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .question_item {
+              position: relative;
+              cursor: pointer; }
+              .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .question_item:before {
+                content: '';
+                width: 22px;
+                height: 22px;
+                background: url(../images/faq/open_icon.png) no-repeat left top;
+                background-size: cover;
+                position: absolute;
+                right: 20px;
+                top: 50%;
+                margin-top: -11px; }
+              .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .question_item a {
+                color: #333;
+                text-decoration: none;
+                display: block;
+                font-size: 1.7rem;
+                font-weight: bold;
+                line-height: 1.2;
+                padding: 20px 50px 20px 70px;
+                position: relative;
+                pointer-events: none; }
+                .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .question_item a .q_icon {
+                  position: absolute;
+                  left: 20px;
+                  top: 50%;
+                  margin-top: -17px;
+                  font-size: 2rem;
+                  line-height: 1;
+                  text-align: center;
+                  font-weight: normal;
+                  background: #73797b;
+                  width: 34px;
+                  height: 34px;
+                  box-sizing: border-box;
+                  letter-spacing: -0.05em;
+                  border-radius: 18px;
+                  padding-top: 5px;
+                  color: white;
+                  padding-right: 3px; }
+            .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .open:before {
+              content: '';
+              width: 22px;
+              height: 22px;
+              background: url(../images/faq/close_icon.png) no-repeat left top;
+              background-size: cover;
+              position: absolute;
+              right: 20px;
+              top: 50%;
+              margin-top: -11px; }
+            .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .answer_item {
+              display: none;
+              position: relative;
+              padding: 0 20px 0 60px; }
+              .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .answer_item .answer_txt {
+                padding: 3px 0 20px 4px;
+                font-size: 1.6rem; }
+              .content-block .tab_content .panel_block .panel_content .panel_inner .elec_qa_container .faq_list .answer_item:after {
+                content: '';
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                background: url(../images/faq/answer_icon.png) no-repeat left top;
+                background-size: cover;
+                left: 23px;
+                top: 0; }
 
 #answer_modal .modal-dialog {
   position: relative;
