--- a/public/css/common.css
+++ b/public/css/common.css
@@ -204,6 +204,18 @@ header {
           background: url("/Agc/public/images/update_icon_sub.png") no-repeat;
           background-position-x: 50%;
           background-position-y: 40%; }
+      .container-fluid .menu-block .menu-list #csv_download a {
+        content: '';
+        background: url("/Agc/public/images/csv_download.png") no-repeat;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background-position-x: 50%;
+        background-position-y: 40%; }
+        .container-fluid .menu-block .menu-list #csv_download a:hover {
+          background: url("/Agc/public/images/csv_download_sub.png") no-repeat;
+          background-position-x: 50%;
+          background-position-y: 40%; }
     .container-fluid .menu-block .menu_second .menu-item {
       margin-top: 1em; }
 
